--- a/market-report.html
+++ b/market-report.html
@@ -5,7 +5,7 @@
 	<title>Exceptional Realty Group - Luxury Homes - Market Report</title>
 </head>
 <body>
-	<h1>Exceptional<h1>
+	<h1>Exceptional</h1>
 	<h2>Realty Group</h2>
 
 <!-- internal links do not have http -->
