--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+  <div id="social">
+    <a href="#">Twitter</a>
+    <a href="#">Facebook</a>
+    <a href="#">Google Plus</a>
+  </div>
     <header>
       <div class="wrapper">
         <div id="logo">
@@ -22,8 +27,8 @@
     </div> <!---closing the .wrapper-->
     </header>
 
-    <div class="wrapper">
-      <section id="featured-property">
+    <div class="wrapper clearfix">
+      <section id="featured-property" class="col-3 first">
         <figure>
           <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
           <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
@@ -33,7 +38,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
       </section>
 
-      <section id="promotional">
+      <section id="promotional" class="col-2 first">
         <figure>
           <video controls>
             <source src="videos/real-estate.mp4" type="video/mp4"> 
@@ -44,15 +49,15 @@
         </figure>
       </section>
 
-      <section id="news">
+      <section id="news" class="col-1">
         <h3>Company News</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, quisquam, fugit, odit, facilis iusto quibusdam sed veniam quo voluptatum consequuntur culpa illo eveniet saepe modi distinctio animi delectus itaque eligendi.</p>
 
         </div> <!---closing the .wrapper-->
 
     <section id="details">
-      <div class="wrapper"> 
-        <div>
+      <div class="wrapper clearfix"> 
+        <div class="col-1 first">
           <h3>Contact</h3>
           <p>
             email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -66,7 +71,7 @@
           </address>
         </div>
 
-        <div>
+        <div class="col-1">
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -75,7 +80,7 @@
           </p>
         </div>
 
-        <div>
+        <div class "col-1">
           <h3>Follow</h3>
           <p>
             <a href="#" target="_blank">Youtube</a><br>
