--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
           <h1>Exceptional</h1>
           <h2>Realty Group</h2>
       </div>
-
+      <div> <!--#navbar -->
+      <div id="navbar">
        <div class="wrapper">
-
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a class="selected" href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </div> <!---closing the .wrapper-->
+  </div> <!--#navbar -->
     </header>
 
     <div class="wrapper clearfix">
-      <section id="featured-property" class="col-3 first">
+      <section id="featured-property" class="col-3 first shadow">
         <figure>
           <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
           <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
@@ -38,7 +39,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
       </section>
 
-      <section id="promotional" class="col-2 first">
+      <section id="promotional" class="col-2 first shadow">
         <figure>
           <video controls>
             <source src="videos/real-estate.mp4" type="video/mp4"> 
@@ -49,7 +50,7 @@
         </figure>
       </section>
 
-      <section id="news" class="col-1">
+      <section id="news" class="col-1 shadow">
         <h3>Company News</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, quisquam, fugit, odit, facilis iusto quibusdam sed veniam quo voluptatum consequuntur culpa illo eveniet saepe modi distinctio animi delectus itaque eligendi.</p>
 
@@ -57,7 +58,7 @@
 
     <section id="details">
       <div class="wrapper clearfix"> 
-        <div class="col-1 first">
+        <div class="col-1 first border-right">
           <h3>Contact</h3>
           <p>
             email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -71,7 +72,7 @@
           </address>
         </div>
 
-        <div class="col-1">
+        <div class="col-1 border-right"">
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
