--- a/market-report.html
+++ b/market-report.html
@@ -14,11 +14,11 @@
     </div>
 
     <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a class="selected" href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
     </nav>
   </header>
-
-  <section>
+<div class="wrapper clearfix">
+  <section class="col-3 first shawdow">
     <h3>Market Report</h3>
     <table>
       <tr>
@@ -47,6 +47,7 @@
       </tr>
     </table>
   </section>
+  </div>
 
   <section id="details">
       <div>
